example/lib/src/generated/errors/errors_localization_af.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Afrikaans (`af`).
class ErrorsLocalizationAf extends ErrorsLocalization {
  ErrorsLocalizationAf([String locale = 'af']) : super(locale);

  @override
  String get error => 'Daar het \'n fout voorgekom';

  @override
  String get unexpectedError => 'Daar het \'n onverwagte fout voorgekom';

  @override
  String get bugReportSentText => 'Bug report sent successfully.';
}
